central de notificações

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -93,7 +93,8 @@
       var OneSignal = window.OneSignal || [];
       OneSignal.push(function () {
         OneSignal.init({
-          appId: '7103a977-54c9-4591-b505-7a856c6e5fae'
+          appId: '7103a977-54c9-4591-b505-7a856c6e5fae',
+          safari_web_id: 'web.onesignal.auto.1d9d9717-02c9-46fa-a0ca-aedc9bb61733'
         });
       });
     </script>
